--- a/sections/implementacao/alunos/avaliacoes.tex
+++ b/sections/implementacao/alunos/avaliacoes.tex
@@ -1,8 +1,8 @@
 \subsubsection{Gestão de avaliações}
 
-A página de avaliações contém um resumo das avaliações à que um aluno foi sujeito. Esta apresenta as unidades curriculares em que o aluno está inscrito, organizada pelo ano letivo destas. Apenas são mostradas unidades curriculares que contêm projetos.
+A página de avaliações contém um resumo das avaliações a que um aluno foi sujeito. Esta apresenta as unidades curriculares em que o aluno está inscrito, organizada pelo ano letivo. Apenas são mostradas unidades curriculares que contêm projetos.
 
-Em cada unidade curricular é feita uma referência ao curso a que esta se refere e é listado os projetos desta.
+Em cada unidade curricular é feita uma referência ao curso a que esta se refere e são listados os projetos desta.
 
 Para cada projeto, além da respetiva nota, também são listadas as fases deste e respetiva nota.
 
