Adiciona ao relatório a secção Próximos objectivos

--- a/sections/proximos_objetivos.tex
+++ b/sections/proximos_objetivos.tex
@@ -1,1 +1,9 @@
 \section{Próximos objetivos}
+No seguimento do desenvolvimento da aplicação, os próximos objetivos passam por focar a atenção nas funcionalidades que se pretendem disponibilizar aos docentes e refazer as funcionalidades básicas já implementadas, para dessa forma ser possível ir de encontro às funcionalidades que se pretende disponibilizar a este tipo específico de utilizador.
+
+Nesse sentido os próximo objetivos passam por garantir aos docentes um painel onde este possa gerir as unidades curriculares que leciona, bem como criar unidades curriculares e os projetos associados, garantindo também a gestão de alunos das unidades curriculares, os seus turnos e toda a logística grupos de trabalho e de avaliações e pautas.
+
+Após a implementação das funcionalidades diretamente relacionadas com a utilização da aplicação por parte dos docentes seguir-se-á para a implementação da publicação, pesquisa e consulta de projetos para todos os utilizadores, registados ou não, do sistema garantindo o consumo e propagação dos projetos desenvolvidos pelos alunos a toda a comunidade.
+
+Por fim, pretende-se após o cumprimento dos objetivos supracitados colmatar qualquer falha ou ponto fraco do sistema que possa eventualmente surgir.
+\newpage
