Alterações nas Pautas de uma fase e projeto

--- a/sections/implementacao/alunos/pautas.tex
+++ b/sections/implementacao/alunos/pautas.tex
@@ -1,6 +1,6 @@
 \subsubsection{Pautas de fase e projeto}
 
-No página de gestão de um projeto, um aluno pode consultar uma pauta detalhada. Esta pauta lista todos os alunos inscritos da unidade curricular associada ao projeto e respetiva nota.
+No página de gestão de um projeto, um aluno pode consultar uma pauta detalhada. Esta pauta lista todos os alunos inscritos na unidade curricular associada ao projeto e respetiva nota.
 
 Além da nota final do projeto, também é possível ver a nota de cada fase.
 
