--- a/sections/implementacao/emails.tex
+++ b/sections/implementacao/emails.tex
@@ -1,1 +1,16 @@
 \subsection{Sistema de emails}
+
+Além das notificações da aplicação, um utilizador também pode ser notificado através de \texir{email}.
+
+As diferenças em relação as notificações, são que um utilizador só é notificado via \texit{email}, nos seguintes casos:
+
+\begin{itemize}
+	\item Submissão de uma entrega
+	\item Lançamento de notas
+	\item Inscrição numa unidade curricular
+	\item Admissão num grupo
+\end{itemize}
+
+No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos.
+
+Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \texit{email} que foi recebido após a submissão de uma entrega.
