--- a/sections/implementacao/emails.tex
+++ b/sections/implementacao/emails.tex
@@ -14,3 +14,10 @@ As diferenças em relação as notificações, são que um utilizador só é not
 No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos.
 
 Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \texit{email} que foi recebido após a submissão de uma entrega.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.65\textwidth,center]{images/implementacao/alunos/emails}
+	\caption{Notificações}
+	\label{fig:mail}
+\end{figure}
