--- a/sections/implementacao/emails.tex
+++ b/sections/implementacao/emails.tex
@@ -2,7 +2,9 @@
 
 Além das notificações da aplicação, um utilizador também pode ser notificado através de \texir{email}.
 
-As diferenças em relação as notificações, são que um utilizador só é notificado via \texit{email}, nos seguintes casos:
+As diferenças em relação as notificações, é que o utilizador não precisa de aceder à aplicação para saber dos eventos mais importantes.
+
+As situações em que um sistema de \texit{email} é vantajoso são:
 
 \begin{itemize}
 	\item Submissão de uma entrega
@@ -11,7 +13,7 @@ As diferenças em relação as notificações, são que um utilizador só é not
 	\item Admissão num grupo
 \end{itemize}
 
-No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos.
+No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos. Este \texit{email} pode ser considerado como um comporovativo em que a entrega foi efetuada.
 
 Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \texit{email} que foi recebido após a submissão de uma entrega.
 
