Alterações no serviço de email

--- a/sections/implementacao/emails.tex
+++ b/sections/implementacao/emails.tex
@@ -1,19 +1,21 @@
 \subsection{Sistema de emails}
 
-Além das notificações da aplicação, um utilizador também pode ser notificado através de \texir{email}.
+Além das notificações da aplicação, um utilizador também pode ser notificado através de \texit{email}.
 
-As diferenças em relação as notificações, é que o utilizador não precisa de aceder à aplicação para saber dos eventos mais importantes.
+Uma das grandes vantagens dos emails em relação às notificações é que o utilizador não precisa de aceder à aplicação para saber dos eventos mais importantes.
 
-As situações em que um sistema de \texit{email} é vantajoso são:
+Algumas das situações em que um sistema de \texit{email} se torna  vantajoso são:
 
 \begin{itemize}
 	\item Submissão de uma entrega
 	\item Lançamento de notas
 	\item Inscrição numa unidade curricular
 	\item Admissão num grupo
+	\item Novo projeto
+	\item Aproximação do final de uma fase
 \end{itemize}
 
-No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos. Este \texit{email} pode ser considerado como um comporovativo em que a entrega foi efetuada.
+No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos. Neste caso o email pode ser importante como comprovativo da entrega.
 
 Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \texit{email} que foi recebido após a submissão de uma entrega.
 
