--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{spverbatim}
 \usepackage{hyperref}
 \usepackage{enumitem}
+\usepackage{subcaption}
 \usepackage{indentfirst}
 \usepackage{lscape}
 
