--- a/sections/implementacao/emails.tex
+++ b/sections/implementacao/emails.tex
@@ -1,10 +1,10 @@
 \subsection{Sistema de emails}
 
-Além das notificações da aplicação, um utilizador também pode ser notificado através de \texit{email}.
+Além das notificações da aplicação, um utilizador também pode ser notificado através de \textit{email}.
 
 Uma das grandes vantagens dos emails em relação às notificações é que o utilizador não precisa de aceder à aplicação para saber dos eventos mais importantes.
 
-Algumas das situações em que um sistema de \texit{email} se torna  vantajoso são:
+Algumas das situações em que um sistema de \textit{email} se torna  vantajoso são:
 
 \begin{itemize}
 	\item Submissão de uma entrega
@@ -15,9 +15,9 @@ Algumas das situações em que um sistema de \texit{email} se torna  vantajoso s
 	\item Aproximação do final de uma fase
 \end{itemize}
 
-No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \texit{email} com a descrição da submissão e com \texit{links} para os ficheiros submetidos. Neste caso o email pode ser importante como comprovativo da entrega.
+No caso da submissão de uma entrega, todos os elementos do grupo serão notificados com um \textit{email} com a descrição da submissão e com \textit{links} para os ficheiros submetidos. Neste caso o email pode ser importante como comprovativo da entrega.
 
-Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \texit{email} que foi recebido após a submissão de uma entrega.
+Na figura ~\ref{fig:mail} é possível ver o conteúdo de um \textit{email} que foi recebido após a submissão de uma entrega.
 
 \begin{figure}[H]
 	\centering
