--- a/sections/implementacao/responsive.tex
+++ b/sections/implementacao/responsive.tex
@@ -1,5 +1,5 @@
 \subsection{Sistema adaptado a todos os dispositivos}
-Hoje em dia, o acesso à aplicações \textwidth{web} através de dispositivos móveis é cada vez maior.
+Hoje em dia, o acesso à aplicações \textit{web} através de dispositivos móveis é cada vez maior.
 
 A garantia de uma maior experiência de visualização, fácil leitura e a redução do redimensionamento do conteúdo da aplicação são fatores que contribuem para o sucesso da mesma.
 
