--- a/sections/solucoes_implementadas.tex
+++ b/sections/solucoes_implementadas.tex
@@ -12,3 +12,7 @@ Serão demonstradas todas as páginas e funcionalidades já implementadas, com j
 \input{sections/implementacao/emails}
 \input{sections/implementacao/exportacao}
 \input{sections/implementacao/responsive}
+\input{sections/implementacao/api_rest}
+\input{sections/implementacao/wrapper}
+\input{sections/implementacao/command_line}
+\input{sections/implementacao/linked_open_data}
