--- a/sections/implementacao/alunos/projeto.tex
+++ b/sections/implementacao/alunos/projeto.tex
@@ -1,4 +1,5 @@
 \subsubsection{Página de projeto}
+\label{ssub:student_project}
 
 É na página de projeto que um aluno pode consultar todas as informações sobre um projeto de uma unidade curricular da qual faz parte.
 
