--- a/sections/implementacao/notificacoes.tex
+++ b/sections/implementacao/notificacoes.tex
@@ -12,7 +12,7 @@ Recorrendo às suas notificações, evita-se que um utilizador tenha que percorr
 
 Na página de um projeto, também são disponibilizadas notificações. Estas possuem as mesmas características das notificações existentes na página inicial.
 
-+Na Figura~\ref{fig:notifications} pode ser consultada uma imagem demonstrativa da funcionalidade implementada.
+Na Figura~\ref{fig:notifications} pode ser consultada uma imagem demonstrativa da funcionalidade implementada.
 
 \begin{figure}[H]
   \centering
