--- a/sections/solucoes_implementadas.tex
+++ b/sections/solucoes_implementadas.tex
@@ -8,6 +8,7 @@ Serão demonstradas todas as páginas e funcionalidades já implementadas, com j
 \input{sections/implementacao/login}
 \input{sections/implementacao/registo}
 \input{sections/implementacao/alunos}
+\input{sections/implementacao/docentes}
 \input{sections/implementacao/notificacoes}
 \input{sections/implementacao/emails}
 \input{sections/implementacao/exportacao}
