Página de consulta e avaliação de uma entrega

--- a/sections/implementacao/docentes.tex
+++ b/sections/implementacao/docentes.tex
@@ -18,5 +18,5 @@ O docente terá ainda acesso a uma barra de navegação que lhe permitirá saber
 \input{sections/implementacao/docentes/entregas}
 % \input{sections/implementacao/docentes/pautas}
  \input{sections/implementacao/docentes/ucs}
-% \input{sections/implementacao/docentes/avaliacoes}
+ \input{sections/implementacao/docentes/avaliacoes}
 
