Adiciona texto ao relatório

--- a/sections/conclusao.tex
+++ b/sections/conclusao.tex
@@ -1,14 +1,14 @@
 \section{Conclusão}
-Chegado o final da segunda fase deste projeto é possível destacar algumas conclusões e decisões que tiveram destaque durante esta etapa de desenvolvimento.
+Chegado o final da terceira fase deste projeto é possível destacar algumas conclusões e decisões que tiveram destaque durante esta etapa de desenvolvimento.
 
-Uma das decisões tomadas, passou por inicialmente garantir a implementação das funcionalidades básicas de todo o sistema, tornando assim posssível manipular todos os dados que circulam internamente, possibilitando a inserção, leitura, atualização e remoção dos mesmos. Após isto, decidiu-se proceder a um refinamento dessas funcionalidades numa ótica direcionada à utilização da aplicação por parte do aluno, refazendo-as de raíz de forma a garantir um funcionamento o mais fiel possível ao que foi planeado e que colmate o melhor possível as necessidades dos alunos. Pretende-se na próxima etapa criar um foco no desenvolvimento das funcionalidades relacionadas diretamente com os docentes e com a comunidade em geral (no que diz respeito à pesquisa e acesso aos projetos já desenvolvidos).
+Esta fase do projeto mostrou ser uma fase de maturação e consolidação do estado do projeto. Foram concluídas quase todas as tarefas relativas às funcionalidades e interfaces da aplicação web, mantendo-se à margem disso apenas pequenas funcionalidades e pormenores na interface, como é o caso da implementação de funcionalidades relativas a testes que estão ainda por ser finalizadas.
 
-De notar também as funcionalidades de autenticação e registo, onde se distinguem os registos de docentes e alunos de forma tornar mais intuitvo o uso do sistema, fornecendo funcionalidades específicas e experiências de utilização desenhadas e idealizadas propositadamente para cada tipo de utilizador.
+Nesta fase a aplicação já tem uma dimensão considerável e tornou-se bastante desafiante manter o ritmo de desenvolvimento que tinha sido mantido até então. Não obstante, os objetivos que tinham sido definidos à partida para esta fase foram cumpridos.
 
-No que diz respeito às conclusões, deve-se destacar o que provaram ter sido boas escolhas na primeira fase do projeto por parte do grupo, nomeadamente as tecnologias a usar e as metodologias de trabalho, bem como interação interna do grupo. Para além disso também foi possível construir uma página principal que transparece bem os objetivos da aplicação, tanto em termos visuais como de conteúdo. O mesmo pode ser dito das interfaces já implementadas, nomeadamente relativas ao painel do aluno que parecem ser uma boa resposta à necessidade dos alunos utlizadores do sistema. 
+Umas das decisões tomadas foi a implementação de uma API 'restful` com um utilitário para consola onde é possível fazer pedidos e interagir com a aplicação sem ter que se optar pela interface web. 
 
-Por fim, também é digno de nota o resultado final desta etapa que agrada o grupo e transparece o empenho e trabalho que tem sido dedicado.
+De forma geral, os objetivos foram atingidos com sucesso, no que diz respeito aos docentes já é possível fazer toda a gestão de Unidades curriculares, projetos, fases, turnos, grupos de alunos, entregas de grupo, bem como avalições. De forma análoga, também as funcionalidades dos utilizadores alunos estão praticamente concluídas. É também já possível ao público em geral fazer pesquisa dos projetos e trabalhos contidos na aplicação.
 
+Para a próxima fase existe um comprometimento em terminar o trabalho que está pela frente e melhorar significativamente a aplicação e as suas funcionalidades.
 
 \newpage
-
