--- a/sections/estado_do_desenvolvimento.tex
+++ b/sections/estado_do_desenvolvimento.tex
@@ -28,7 +28,8 @@ De referir que todas as funcionalidades que já foram implementadas já se encon
 
 Em jeito de resumo já é possível fornecer aos alunos utilizadores do sistema uma aplicação que lhes permite gerir as suas unidades curriculares, ingressar em projetos, fazer entregas, consultar pautas e avalições, criar os seus grupos de trabalho, entre outras funcionalidades, garantido assim grande parte das funcionalidades planeadas para este tipo de utilizador.
 
-De seguida virar-se-ão as atenções para as funcionalidades no plano de utilização do sistema por parte dos docentes onde por agora se encontram implementadas funcionalidades básicas de \textit{CRUD}.
+À data de escrita deste relatório, já se podem dar como garantidas praticamente todas as funcionalidades não só dos utilizadores alunos como também dos utilizadores docentes. Também do lado dos utilizadores não registados é possível fazer pesquisa de projetos publicados na plataforma.
 
+De realçar também a implementação de uma API 'restful` e de um utilitário de consola para servir de meio à interação com a aplicação. Neste momento encontram-se implementados métodos básicos no que diz respeito aos pedidos que um utilizador docente pode fazer à aplicação. No futuro tratar-se-ão das funcionalidades mais avançadas e da interação dos utilizadores alunos através da mesma API.
 
 \newpage
