--- a/sections/proximos_objetivos.tex
+++ b/sections/proximos_objetivos.tex
@@ -1,9 +1,8 @@
 \section{Próximos objetivos}
-No seguimento do desenvolvimento da aplicação, os próximos objetivos passam por focar a atenção nas funcionalidades que se pretendem disponibilizar aos docentes e refazer as funcionalidades básicas já implementadas, para dessa forma ser possível ir de encontro às funcionalidades que se pretende disponibilizar a este tipo específico de utilizador.
+No seguimento do desenvolvimento da aplicação, os próximos objetivos passam por focar a atenção nos detalhes que ainda faltam no que diz respeito à aplicação web bem como continuar o desenvolvimento da interface de programação de aplicativos (API) 'restful` implementando mais métodos e funcionalidades para a interação externa com a aplicação web por parte dos utilizadores docentes. Ainda no que concerne à API, serão implementados os métodos básicos para a interacção dos utilizadores alunos com a aplicação e depois serão concretizados métodos e funcionalidades mais avançados para todos os utilizadores. 
 
-Nesse sentido os próximo objetivos passam por garantir aos docentes um painel onde este possa gerir as unidades curriculares que leciona, bem como criar unidades curriculares e os projetos associados, garantindo também a gestão de alunos das unidades curriculares, os seus turnos e toda a logística grupos de trabalho e de avaliações e pautas.
+Existe também em desenvolvimento um utilitário de consola que permite uma interação muito intuitiva com a API que se está a desenvolver em paralelo. O futuro passa em criar uma ponte funcional e competente entre o utilitário, a API e a aplicação para todos os utilizadores.
 
-Após a implementação das funcionalidades diretamente relacionadas com a utilização da aplicação por parte dos docentes seguir-se-á para a implementação da publicação, pesquisa e consulta de projetos para todos os utilizadores, registados ou não, do sistema garantindo o consumo e propagação dos projetos desenvolvidos pelos alunos a toda a comunidade.
+Por fim, no que diz respeito à aplicação web serão implementadas as funcionalidades de testes às entregas dos alunos onde é possível verificar automaticamente através de testes programáveis se o trabalho realizado pelos alunos está de acordo com as exigências e especificações do enunciado do projecto.
 
-Por fim, pretende-se após o cumprimento dos objetivos supracitados colmatar qualquer falha ou ponto fraco do sistema que possa eventualmente surgir.
 \newpage
