--- a/sections/solucoes_implementadas.tex
+++ b/sections/solucoes_implementadas.tex
@@ -18,3 +18,4 @@ Serão demonstradas todas as páginas e funcionalidades já implementadas, com j
 \input{sections/implementacao/wrapper}
 \input{sections/implementacao/command_line}
 \input{sections/implementacao/linked_open_data}
+\input{sections/implementacao/oai_pmh}
