--- a/sections/conclusao.tex
+++ b/sections/conclusao.tex
@@ -1,14 +1,12 @@
 \section{Conclusão}
-Chegado o final da terceira fase deste projeto é possível destacar algumas conclusões e decisões que tiveram destaque durante esta etapa de desenvolvimento.
+Chegado a fase final do projecto torna-se possível e necessário destacar algumas conclusões e ilações que merecem destaque durante toda esta última fase de desenvolvimento e término do projecto.
 
-Esta fase do projeto mostrou ser uma fase de maturação e consolidação do estado do projeto. Foram concluídas quase todas as tarefas relativas às funcionalidades e interfaces da aplicação web, mantendo-se à margem disso apenas pequenas funcionalidades e pormenores na interface, como é o caso da implementação de funcionalidades relativas a testes que estão ainda por ser finalizadas.
+Esta última fase mostrou ser uma fase de enriquecimento e polimento do projecto tentando sempre estender o seu alcance a todos os conteúdos leccionados durante todo o ano lectivo na UCE de Engenharia de Linguagens.
 
-Nesta fase a aplicação já tem uma dimensão considerável e tornou-se bastante desafiante manter o ritmo de desenvolvimento que tinha sido mantido até então. Não obstante, os objetivos que tinham sido definidos à partida para esta fase foram cumpridos.
+Neste sentido, nesta última fase tentou-se chegar a um ponto de convergência entre todos os módulos sendo possível usar todo o tipo de tecnologias que abordámos. É possível destacar o enriquecimento da API restful já iniciada na etapa anterior, assim como o uso de ferramentas de processamento de texto como o Apace FOP para XSLFO. Para além disso também se deve destacar o desenvolvimento de um utilitário para a consola desenvolvido em Perl onde é possível fazer pedidos e interagir com a aplicação sem ter que se optar pela interface web.
 
-Umas das decisões tomadas foi a implementação de uma API 'restful` com um utilitário para consola onde é possível fazer pedidos e interagir com a aplicação sem ter que se optar pela interface web. 
+É também importante focar que uma aplicação desta complexidade tem sempre um espaço de evolução enorme, e como tal seria possível acrescentar todo um rol de funcionalidades novas e expandir o sistema, visto que ele se encontra preparado para tal.
 
-De forma geral, os objetivos foram atingidos com sucesso, no que diz respeito aos docentes já é possível fazer toda a gestão de Unidades curriculares, projetos, fases, turnos, grupos de alunos, entregas de grupo, bem como avalições. De forma análoga, também as funcionalidades dos utilizadores alunos estão praticamente concluídas. É também já possível ao público em geral fazer pesquisa dos projetos e trabalhos contidos na aplicação.
-
-Para a próxima fase existe um comprometimento em terminar o trabalho que está pela frente e melhorar significativamente a aplicação e as suas funcionalidades.
+A aplicação web foi dada como terminada, bem como todas as tarefas e objectivos aos quais, ambiciosamente nos tínhamos propostos. Assim sendo encerramos o processo de desenvolvimentos satisfeitos com o resultado final e acima de tudo com todo o processo de aprendizagem como grupo e como alunos da UCE de Engenharia de Linguagens.
 
 \newpage
