--- a/sections/estado_do_desenvolvimento.tex
+++ b/sections/estado_do_desenvolvimento.tex
@@ -32,4 +32,9 @@ Em jeito de resumo já é possível fornecer aos alunos utilizadores do sistema 
 
 De realçar também a implementação de uma API 'restful` e de um utilitário de consola para servir de meio à interação com a aplicação. Neste momento encontram-se implementados métodos básicos no que diz respeito aos pedidos que um utilizador docente pode fazer à aplicação. No futuro tratar-se-ão das funcionalidades mais avançadas e da interação dos utilizadores alunos através da mesma API.
 
+Chegando à fase final do projecto todas as tarefas descritas acima foram 
+completadas, assim como adicionadas outras novas e enriquecidas as que já 
+estavam feitas. Nesse sentido foram introduzidas  funcionalidades de exportação de pautas, 
+de pesquisa de projectos públicos, estatísticas, um maior suporte de API e do 
+utilitário para a linha de comandos entre outros aspectos.
 \newpage
