--- a/sections/proximos_objetivos.tex
+++ b/sections/proximos_objetivos.tex
@@ -1,8 +1,12 @@
 \section{Próximos objetivos}
-No seguimento do desenvolvimento da aplicação, os próximos objetivos passam por focar a atenção nos detalhes que ainda faltam no que diz respeito à aplicação web bem como continuar o desenvolvimento da interface de programação de aplicativos (API) 'restful` implementando mais métodos e funcionalidades para a interação externa com a aplicação web por parte dos utilizadores docentes. Ainda no que concerne à API, serão implementados os métodos básicos para a interacção dos utilizadores alunos com a aplicação e depois serão concretizados métodos e funcionalidades mais avançados para todos os utilizadores. 
+Nesta fase final do projecto é possível dizer que todas as tarefas e objectivos 
+foram cumpridos com sucesso e estão na sua fase final.
 
-Existe também em desenvolvimento um utilitário de consola que permite uma interação muito intuitiva com a API que se está a desenvolver em paralelo. O futuro passa em criar uma ponte funcional e competente entre o utilitário, a API e a aplicação para todos os utilizadores.
+No entanto, é também importante focar que uma aplicação desta complexidade tem sempre um espaço de evolução enorme, e como tal seria possível acrescentar todo um rol de funcionalidades novas e expandir o sistema, visto que ele se encontra preparado para tal.
 
-Por fim, no que diz respeito à aplicação web serão implementadas as funcionalidades de testes às entregas dos alunos onde é possível verificar automaticamente através de testes programáveis se o trabalho realizado pelos alunos está de acordo com as exigências e especificações do enunciado do projecto.
+Como próximos objectivos estarão certamente o deployment do sistema para um 
+servidor em rede de forma a disponibilizá-lo para toda a comunidade online de 
+forma a este ser usado e testado.
+
 
 \newpage
