--- a/sections/solucoes_implementadas.tex
+++ b/sections/solucoes_implementadas.tex
@@ -1,5 +1,4 @@
 \section{Soluções implementadas}
-
 Nesta secção serão referidas todas as soluções já implementadas para o problema descrito.
 
 Serão demonstradas todas as páginas e funcionalidades já implementadas, com justificações para as decisões tomadas.
@@ -9,9 +8,11 @@ Serão demonstradas todas as páginas e funcionalidades já implementadas, com j
 \input{sections/implementacao/registo}
 \input{sections/implementacao/alunos}
 \input{sections/implementacao/docentes}
+\input{sections/implementacao/projectos}
 \input{sections/implementacao/notificacoes}
 \input{sections/implementacao/emails}
 \input{sections/implementacao/exportacao}
+\input{sections/implementacao/exportacao_pautas}
 \input{sections/implementacao/responsive}
 \input{sections/implementacao/api_rest}
 \input{sections/implementacao/wrapper}
